# SmartParkingGU

./: .gitignore  DIAGRAMAS.md  LICENSE  README.md  SmartParkingr.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/frames_video/: frames_metadata.csv
docs/: PlanEjecucion.md
notebooks/: 01_dataset_overview.ipynb  01_dataset_overview.ipynbipynb  02_base_model_cnrpark.ipynb  03_finetune_cnrpark.ipynb  COLAB_EJECUCION.ipynb  COLAB_GPU_CONNECT.ipynb  SmartParkingr.ipynb
scripts/: __init__.py  analyze_videos.py  data.py  evaluate.py  extract_frames.py  inference.py  models.py  train.py
src/: __init__.py  evaluate.py  hyperparameter_search.py  inference.py  train.py
src/utils/: __init__.py  colab_connect.py
tests/: __init__.py  test_data.py  test_evaluate.py  test_models.py  test_train.py
